--- a/package.json
+++ b/package.json
@@ -7,5 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rodrigo Ribeiro",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "mocha": "5.0.4",
+    "supertest": "3.0.0"
+  },
+  "dependencies": {
+    "body-parser": "1.18.2",
+    "consign": "0.1.6",
+    "express": "4.16.3",
+    "mongoose": "5.0.10",
+    "safira": "1.1.1"
+  }
 }
