--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Projeto desenvolvido para o desafio do processo seletivo da empresa B2W",
   "main": "server.js",
   "scripts": {
-    "test": "mocha test/**/*.js"
+    "test": "NODE_ENV=test mocha test/**/*.js"
   },
   "author": "Rodrigo Ribeiro",
   "license": "ISC",
   "devDependencies": {
+    "database-cleaner": "^1.2.0",
     "mocha": "5.0.4",
     "supertest": "3.0.0"
   },
