--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "4.16.3",
     "js-yaml": "3.11.0",
     "mongoose": "5.0.10",
+    "node-fetch": "^2.1.1",
     "safira": "1.1.1"
   }
 }
