--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node index", 
-    "test": "NODE_ENV=test mocha test/**/*.js"
+    "test": "NODE_ENV=test mocha -t 0 test/**/*.js"
   },
   "author": "Rodrigo Ribeiro",
   "license": "ISC",
