--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto desenvolvido para o desafio do processo seletivo da empresa B2W",
   "main": "server.js",
   "scripts": {
-    "start": "node index", 
+    "start": "node index",
     "test": "NODE_ENV=test mocha -t 0 test/**/*.js"
   },
   "author": "Rodrigo Ribeiro",
@@ -21,6 +21,7 @@
     "js-yaml": "3.11.0",
     "mongoose": "5.0.10",
     "node-fetch": "^2.1.1",
-    "safira": "1.1.1"
+    "safira": "1.1.1",
+    "winston": "^2.3.1"
   }
 }
