--- a/config/production.yml
+++ b/config/production.yml
@@ -6,7 +6,9 @@ mongodb:
 server: 
   port: 3009 
 
-swApi: https://swapi.co/api
+swApi: 
+  host: https://swapi.co/api
+  timeout: 3000
 
 log:
   path: /var/log/desafio
